# CTF-Tools

./: README.md  pyproject.toml
.github/workflows/: publish.yml
generator/: main.py
loader/: main.py
src/paoloctf/: __init__.py  __main__.py  generator.py  loader.py
