[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paoloctf"
version = "0.1.0"
description = "CLI tool for creating and managing CTF challenges for PascalCTF"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "PascalCTF", email = "pascalctf@example.com"}
]
keywords = ["ctf", "cybersecurity", "challenge", "generator", "pascalctf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
checker = [
    "pwntools>=4.0.0",
    "requests>=2.25.0",
]
dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/PascalCTF/CTF-Tools"
Repository = "https://github.com/PascalCTF/CTF-Tools"
Issues = "https://github.com/PascalCTF/CTF-Tools/issues"

[project.scripts]
paoloctf = "paoloctf.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
